# mieospo

./: .gitignore  CMakeLists.txt  README.md  createProject.sh
helpers/: CMakeLists.txt  pathsHelpers.h.in
src/tests/: CMakeLists.txt
src/tests/01_UseExternalLibExample/: CMakeLists.txt  main.cpp
